# doculase

./: Cargo.toml  bill.json  cache.json  package-lock.json  package.json
lib/rust_openai/: Cargo.toml
lib/rust_openai/src/: batteries.rs  client.rs  constants.rs  lib.rs
lib/rust_openai/src/models/: gpt_models.rs  mod.rs  query.rs  req_and_res.rs  request.rs
lib/rust_openai/src/models/batteries/: CompleteVoynich.txt  Essay.txt  MetConsensus.txt
lib/rust_openai/src/models/db/: db.rs  db.sql  mod.rs  prelude.rs  query_cache.rs
prisma/: schema.prisma
src/: env.rs  main.rs
src/routes/: mod.rs
src/routes/dev/: mod.rs  rust_openai_test.rs
src/routes/documents/: add.rs  remove.rs
src/routes/jobs/: add.rs  cancel.rs  list.rs  mod.rs
src/routes/libraries/: create.rs
src/utils/: validation.rs
