[package]
name = "doculysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

name = "rust_openai"
path = "lib/rust_openai/src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json",]} # "secrets"
chrono = "0.4.26"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sea-orm = { version = "0.12.0-rc.2", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
sea-query = "0.30.2"
urlencoding = "2.1.2"
dotenvy = "0.15.7"
lopdf = "0.31.0"


# Web Scraping
error-chain = "0.12.4"
reqwest = "0.11.18"

# Email validation
check-if-email-exists = "0.9.0"